--- a/search.html
+++ b/search.html
@@ -27,9 +27,13 @@
 
 	<div id="results">
 		<div class="result_item">
-			<div class="title">This is a sample title</div>
-			<div class="author">Smoth, John</div>
-			<div class="link">http://books.scholarsportal.info/...</div>
+			<div class="cover"></div>
+			<div class="text">
+				<div class="title">This is a sample title</div>
+				<div class="author">Smoth, John</div>
+				<div class="link">http://books.scholarsportal.info/...</div>
+			</div>
+			<div style="clear:both" />
 		</div>
 		
 	</div>
