--- a/search.html
+++ b/search.html
@@ -20,8 +20,8 @@
 	<div id="header"></div>
 	
 	<div id="search">
-		<form>
-			<input id="search_field" />
+		<form method="get" action="">
+			<input id="q" name="q"/>
 		</form>
 	</div>
 
